WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245293
[JSC] returnEarlyFromInfiniteLoopsForFuzzing should return globalThis
https://bugs.webkit.org/show_bug.cgi?id=245293
Summary
[JSC] returnEarlyFromInfiniteLoopsForFuzzing should return globalThis
Yusuke Suzuki
Reported
2022-09-16 13:05:35 PDT
rdar://99569065
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-09-16 13:08:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4431
EWS
Comment 2
2022-09-16 18:08:48 PDT
Committed
254578@main
(1c9bd752d959): <
https://commits.webkit.org/254578@main
> Reviewed commits have been landed. Closing PR #4431 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug