Cherry-pick 1c9bd752d959. rdar://problem/99569065

[JSC] returnEarlyFromInfiniteLoopsForFuzzing should return globalThis
    https://bugs.webkit.org/show_bug.cgi?id=245293
    <rdar://99569065>

    Reviewed by Justin Michaud.

    Raw JSGlobalObject is not expected to be exposed directly to the user JS code usually.
    Instead, we expect globalThis is exposed. But returnEarlyFromInfiniteLoopsForFuzzing fuzzing
    feature accidentally exposes JSGlobalObject and causing trouble in Proxy implementation
    (when JSGlobalObject is passed as |this| to JS strict code, it becomes undefined instead of an object)
    This patch fixes returnEarlyFromInfiniteLoopsForFuzzing so that it returns globalThis instead.

    * JSTests/stress/proxy-helper-this.js: Added.
    (foo):
    (let.handler.string_appeared_here):
    (async let):
    * Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:
    (JSC::DFG::SpeculativeJIT::compileLoopHint):
    * Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
    (JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):
    * Source/JavaScriptCore/jit/JITOpcodes.cpp:
    (JSC::JIT::emit_op_loop_hint):
    * Source/JavaScriptCore/llint/LowLevelInterpreter32_64.asm:
    * Source/JavaScriptCore/llint/LowLevelInterpreter64.asm:

    Canonical link: https://commits.webkit.org/254578@main

Canonical link: https://commits.webkit.org/252432.522@safari-7614-branch